sampleapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: sampleapp
  name: sampleapp
  selfLink: /api/v1/namespaces/infra-arch/services/sampleapp
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: sampleapp
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
