sampleapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sampleapp-ingress
  annotations:
    kubernetes.io/ingress.class: default
spec:
  rules:
  - host: sampleapp-amp.apps-test.aws.e1.nwie.net
    http:
      paths:
      - backend:
          # Reference your Service by name
          serviceName: sampleapp  
          # Reference your Service Port by either name or number
          # servicePort: http
          servicePort: 8080
